# Vega.ai

./: .dockerignore  .gitattributes  .gitignore  AUTH_SYSTEM.md  DEPLOYMENT.md  DOCKER.md  DOCKER_SETUP_SUMMARY.md  Dockerfile  Dockerfile.render  README.md  README_AUTH.md  RENDER_DEPLOYMENT.md  TESTING.md  USER_MANAGEMENT_GUIDE.md  build.bat  build.sh  chat.md  config.yaml  deploy-cloud.sh  deploy-production.sh  deploy.bat  deploy.sh  docker-build.bat  docker-build.sh  docker-compose.prod.yml  docker-compose.yml  docker-debug.bat  main.py  nginx.conf  railway.toml  render.yaml  requirements-render.txt  requirements.txt  start.py  start.sh  test-runner.bat  test_auth.py  test_fix.py  users.json
AgenticFlow/: .env.example  .gitignore  ENV_SETUP.md  LICENSE  Makefile  README.md  explanation.md  generate_inventory.py  inventory.yaml  pyproject.toml  pytest.ini  test_endpoints.py  test_mongodb.py  test_simulator.py
AgenticFlow/References/: License Agent.ipynb  License_Summary.ipynb  mock_pf_license.txt  swagger.PingFed.json
AgenticFlow/pf_agent/: __init__.py  cli.py  config.py  inventory.yaml
AgenticFlow/pf_agent/agents/: crew.py  intents.py
AgenticFlow/pf_agent/domain/: mapping.py  models.py  services.py
AgenticFlow/pf_agent/simulators/: pingfed_mock.py  seed_data.py
AgenticFlow/pf_agent/tests/: test_cli.py  test_repos.py  test_services.py  (+1 more)
AgenticFlow/samples/: pf_10_days.lic  pf_29_days.lic  pf_30_days.lic  pf_60_days.lic  pf_dev_expired.lic  pf_enterprise.lic  pf_expired.lic  pf_expiring_soon.lic  pf_extended.lic  pf_new.lic  pf_short_term.lic
(+138 files in other folders)
