[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pf-agent"
version = "0.1.0"
description = "PingFederate Ops Agent - License Management CLI"
authors = [{name = "PF Ops Team"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "crewai>=0.28.0",
    "pymongo>=4.6.0",
    "python-dateutil>=2.8.2",
    "apscheduler>=3.10.4",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
pf-agent = "pf_agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["pf_agent"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
